# rodi

./: README.md  pyproject.toml  rodi.code-workspace
rodi/: __init__.py  annotations.py  common.py  constants.py  container.py  context.py  exceptions.py  inject.py  services.py  typings.py
rodi/providers/: factory.py  scoped.py  singleton.py  transient.py
rodi/resolvers/: dynamic.py  factory.py  instance.py
tests/: test_services.py
