[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rodi"
dynamic = ["version"]
authors = [
    { name = "Roberto Prevato", email = "roberto.prevato@gmail.com" },
]
description = "Implementation of dependency injection for Python 3"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["dependency", "injection", "type", "hints", "typing"]
dependencies = [
    "typing_extensions; python_version < '3.8'"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/examples",
  "/deps",
  "/htmlcov",
  "/tests",
  "mkdocs-plugins.code-workspace",
  "Makefile",
  "CODE_OF_CONDUCT.md",
  ".isort.cfg",
  ".gitignore",
  ".flake8",
  "junit",
  "rodi.code-workspace",
  "requirements.txt",
  "mypy.ini",
  "pytest.ini",
  "examples-summary.py",
]

[tool.hatch.version]
path = "rodi/__about__.py"

[project.urls]
"Homepage" = "https://github.com/Neoteroi/rodi"
"Bug Tracker" = "https://github.com/Neoteroi/rodi/issues"

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
warn_return_any = true
follow_imports = "skip"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
show_column_numbers = true
ignore_errors = false
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_unused_ignores = true
no_implicit_reexport = false
